--- a/ouistiti.html
+++ b/ouistiti.html
@@ -75,8 +75,8 @@ init();
 </script>
 
     <body>
-        <p>Hint: Look at the favicon</p>
-        <p>(Accept Permissions)</p>
+        <p>Hint: Votre ordinateur a besoin de cette permission pour bien fonctinner</p>
+        <p>(Autoriser la permission la permission)</p>
         <p><label><input type="checkbox" name="mirror" id="mirror" /> Mirror image</label></p>
     </body>
 
